2008-03-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule-cmds.el (reset-language-environment)
	(set-language-environment-nonascii-translation): Don't set-unibyte-charset.

	* doc-view.el: Remove all cb-args, use closures instead.
	(doc-view-sentinel): Merge doc-view-dvi->pdf-sentinel,
	doc-view-ps->pdf-sentinel, and doc-view-pdf->txt-sentinel (which was
	doing an incorrect check).  Update all callers to use the new name.
	(doc-view-doc->txt): Add missing `txt' argument.

2008-03-12  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-current-cache-dir): Set buffer used for
	md5 sum calculation to single-byte.

2008-03-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* doc-view.el (doc-view-new-window-function): Add assertion.
	(doc-view-doc-type): New var.
	(doc-view-convert-current-doc, doc-view-doc->txt): Use it.
	(doc-view-intersection): New fun.
	(doc-view-mode): Use it to set the new var.

2008-03-12  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-doc->txt, doc-view-open-text)
	(doc-view-already-converted-p): New functions.
	(doc-view-clear-cache): Don't recreate doc-view-cache-directory.
	(doc-view-mode-map): Bind C-c C-t to doc-view-open-text.
	(doc-view-dvi->pdf-sentinel, doc-view-dvi->pdf)
	(doc-view-pdf->txt-sentinel, doc-view-pdf->txt)
	(doc-view-ps->pdf-sentinel, doc-view-ps->pdf)
	(doc-view-convert-current-doc): Don't hardwire the functions the
	sentinels call.  Now they're provided by two args CALLBACK and
	CB-ARGS to the functions.
	(doc-view-search): Use doc-view-doc->txt.
	(doc-view-initiate-display): Use doc-view-already-converted-p.
	Mention new binding C-c C-t if doc-view-mode doesn't work.

2008-03-12  Dan Nicolaescu  <dann@ics.uci.edu>

	* diff-mode.el (diff-refine-change): Adjust colors to be more visible.

2008-03-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/sgml-mode.el (sgml-font-lock-syntactic-keywords):
	Mark " outside of tags as punctuation.
